--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>PixiJS - Slots</title>
+    <title>PixiJS</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>Learning Pixi JS</h1>
 
 
-<script src="scripts.js"></script>
+    <script src="pixi.min.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
